fix body overflow x issue

--- a/src/styles/sass/global.sass
+++ b/src/styles/sass/global.sass
@@ -4,3 +4,4 @@
 
 body
     background-color: #f6f7fb
+    overflow-x: hidden
